2001-04-27  Darin Adler  <darin@eazel.com>

	reviewed by: Robin Slomkowski <rslomkow@eazel.com>

	Update FAM support so it works fine on systems with and without
	libfam installed. So if you build Nautilus with FAM, then you can
	run it on a system with or without FAM.

	* configure.in:
	* libnautilus-extensions/Makefile.am:
	Remove the FAM_LIBS part.
	
	* libnautilus-extensions/nautilus-monitor.c: (get_fam_connection):
	Load the module before the FAMOpen2 call, and get all the function
	pointers.
	(get_event_uri), (process_fam_notifications),
	(nautilus_monitor_file), (nautilus_monitor_directory),
	(nautilus_monitor_cancel): Use the new CALL_FAM macro so we can
	use the function pointers when we call FAM.

2001-04-27  Andy Hertzfeld  <andy@eazel.com>

	* components/news/nautilus-news.c: (go_to_uri):
	fixed bug 8186, clicking on a title while it's loading crashes
	the news panel; fixed by checking for NULL.
	
	* components/news/news_channels.xml:
	removed the Dan Gillmor channel since it just moved and I can't
	find where the rss file is on the new site.
	
2001-04-27  John Harper  <jsh@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>

	Fixed bug 7732 (opening window from prompt spawns endless
	process cycle):

	* src/nautilus-application.c (desktop_changed_callback): call
	update_session () directly

	(update_session): don't check the SHOW_DESKTOP preference to
	see if we should add ourselves to the session, check that the
	current process has actually _created_ a desktop window

	(init_session): don't register a listener for the SHOW_DESKTOP
	preference since it's called by desktop_changed_callback ()

2001-04-27  Ramiro Estrugo  <ramiro@eazel.com>

	* libnautilus-extensions/nautilus-preferences.c:
	(nautilus_self_check_preferences):
	Disabled preferences self checks until I can debug why these
	seemingly harmless tests dont work.

2001-04-27  Ramiro Estrugo  <ramiro@eazel.com>

	* components/help/hyperbola-main.c: (main): 